--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
 <div class="card"><iframe width="560" height="315" src="https://www.youtube.com/embed/xY81lkFB57A?si=TTxO1erXtkmkmTqZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </iframe><h4>Айнабо "Сердце Амазонии"</h4></div>
 <div class="card"><iframe width="560" height="315" src="https://www.youtube.com/embed/bis-gt7E2xY?si=bEoT3hmygmNL1K56" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</iframe><h4>Пушистый шпион</h4></div>
+</iframe><h4>Пушистый шпион </h4></div>
 </div>
+<span></span>
 </section>   
 
-<footer>© 2026 KinoHub </footer>
+<footer>© 2026 KinoHub by Temur</footer>
 
 
 <script src="./script.js"></script>
